--- a/MarvelvsDc/app/src/main/res/values/styles.xml
+++ b/MarvelvsDc/app/src/main/res/values/styles.xml
@@ -29,4 +29,8 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppThemeMarvel.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppThemeMarvel.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
