--- a/MarvelvsDc/app/src/main/res/layout/content_localizacion_basica.xml
+++ b/MarvelvsDc/app/src/main/res/layout/content_localizacion_basica.xml
@@ -8,4 +8,26 @@
     tools:context=".activities.LocalizacionBasica"
     tools:showIn="@layout/activity_localizacion_basica">
 
+
+    <TextView
+        android:id="@+id/txt_latitud"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txt_longitud"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/txt_latitud"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
